--- a/tallerb/public/css/style.css
+++ b/tallerb/public/css/style.css
@@ -1,4 +1,4 @@
-.App{
+body{
   text-align: center;
 }
 .form-control{
@@ -8,4 +8,12 @@
 
 .navbar li a.active{
   background-color: #e7e7e7;
+}
+
+li {
+  list-style: none;
+}
+
+th{
+  text-align: center;
 }
